5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1679_1100.log
== TEST (2019-04-25 17:41:37) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:tartaruga")
elif(x==5):
	print("Animal:garca")
elif(x==10):
	print("Animal:arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("garoupa")
else:
	print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:41:47) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:tartaruga")
elif(x==5):
	print("Animal:garca")
elif(x==10):
	print("Animal:arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("garoupa")
else:
	print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:41:54) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:tartaruga")
elif(x==5):
	print("Animal:garca")
elif(x==10):
	print("Animal:arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("garoupa")
else:
	print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:42:06) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:tartaruga")
elif(x==5):
	print("Animal:garca")
elif(x==10):
	print("Animal:arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("garoupa")
else:
	print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:42:16) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:tartaruga")
elif(x==5):
	print("Animal:garca")
elif(x==10):
	print("Animal:arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("garoupa")
else:
	print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:42:24) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:tartaruga")
elif(x==5):
	print("Animal:garca")
elif(x==10):
	print("Animal:arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("garoupa")
else:
	print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:43:00) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garca")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("Garoupa")
else:
	print("Animal:Invalido")
-- EXECUTION TIME:
0.206714
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:43:52) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garça")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leão-dourado")
elif((x==50)or(x==100)):
	print("Garoupa")
else:
	print("Animal:Invalido")
-- EXECUTION TIME:
0.142208
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:43:54) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garça")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leão-dourado")
elif((x==50)or(x==100)):
	print("Garoupa")
else:
	print("Animal:Invalido")
-- EXECUTION TIME:
0.1222
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:43:54) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garça")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leão-dourado")
elif((x==50)or(x==100)):
	print("Garoupa")
else:
	print("Animal:Invalido")
-- EXECUTION TIME:
0.108842
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:43:54) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garça")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leão-dourado")
elif((x==50)or(x==100)):
	print("Garoupa")
else:
	print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:44:14) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garca")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("Garoupa")
else:
	print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:44:27) 
-- CODE:
x = int(input("x:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garca")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("Garoupa")
else:
	print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:46:26) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garca")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("Animal:Garoupa")
else:
	print("Animal:Invalido")
-- EXECUTION TIME:
0.158336
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal:Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:46:28) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garca")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("Animal:Garoupa")
else:
	print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:46:33) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garca")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("Animal:Garoupa")
else:
	print("Animal:Invalido")
-- EXECUTION TIME:
0.172412
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal:Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 100
Animal:Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:46:33) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garca")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("Animal:Garoupa")
else:
	print("Animal:Invalido")
-- EXECUTION TIME:
0.106365
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal:Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:46:34) 
-- CODE:
x = int(input("2,5,10,20,50,100:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garca")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("Animal:Garoupa")
else:
	print("Animal:Invalido")
-- EXECUTION TIME:
0.178544
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal:Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:48:10) 
-- CODE:
x = int(input("x:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garca")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif((x==50)or(x==100)):
	print("Animal:Garoupa")
else:
	print("Animal:Invalido")
-- EXECUTION TIME:
0.145136
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal:Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:53:01) 
-- CODE:
x = int(input("x:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garca")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif(x==50)
	 print("Animal:Onca-pintada")
elif(x==100)):
	print("Animal:Garoupa")
else:
	print("Animal:Invalido")
-- EXECUTION TIME:
0.18124
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 11
    elif(x==50)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:53:06) 
-- CODE:
x = int(input("x:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal:Garca")
elif(x==10):
	print("Animal:Arara")
elif(x==20):
	print("Animal:Mico-leao-dourado")
elif(x==50)
	 print("Animal:Onca-pintada")
elif(x==100):
	print("Animal:Garoupa")
else:
	print("Animal:Invalido")
-- EXECUTION TIME:
0.145304
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 11
    elif(x==50)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:53:36) 
-- CODE:
x = int(input("x:"))
print("Entrada:",x)
if(x==2):
	print("Animal:Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50)
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.16528
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 11
    elif(x==50)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:53:40) 
-- CODE:
x = int(input("x:"))
print("Entrada:",x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50)
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.190579
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 11
    elif(x==50)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:56:28) 
-- CODE:
x = int(input("x:"))
print("Entrada:",x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
   print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.136922
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
